IDE主界面/ide/ide/build-IDE2-Desktop_Qt_5_10_1_MinGW_32bit-Profile/err.txt
C:/Users/SK-31/Desktop/test.c: In function 'main':
C:/Users/SK-31/Desktop/test.c:13:2: error: 'jjj' undeclared (first use in this function)
  return 0;
  ^
C:/Users/SK-31/Desktop/test.c:13:2: note: each undeclared identifier is reported only once for each function it appears in
C:/Users/SK-31/Desktop/test.c:14:2: error: expected ';' before 'return'
